n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  name: n8n
  labels:
    gateway-access: home-ingress
