n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  type: NodePort
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
      nodePort: 30080
